--- a/about.html
+++ b/about.html
@@ -120,7 +120,9 @@
         </div>
         <ul class="flex flex-col gap-2 text-center">
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="index.html">Home</a>
+            <a class="text-xs text-[#000000] font-semibold" href="index.html"
+              >Home</a
+            >
           </li>
           <li>
             <a class="text-xs text-[#000000] font-semibold" href="about.html"
@@ -148,7 +150,9 @@
             >
           </li>
           <li>
-            <a class="text-xs text-[#000000] font-semibold" href="kontak.html">Kontak</a>
+            <a class="text-xs text-[#000000] font-semibold" href="kontak.html"
+              >Kontak</a
+            >
           </li>
         </ul>
       </div>
