--- a/infoppdb.html
+++ b/infoppdb.html
@@ -35,7 +35,11 @@
         </div>
         <ul class="hidden md:flex justify-center items-center gap-5">
           <a href="#"
-            ><li class="text-base font-normal text-white">Beranda</li></a
+            ><li
+              class="text-base font-normal text-slate-300 hover:text-white transition-all ease-in-out"
+            >
+              Beranda
+            </li></a
           >
           <a href="about.html"
             ><li
@@ -169,228 +173,173 @@
       </div>
     </section>
 
-    <section class="sambutan mb-16">
+    <section class="w-full mt-6">
       <div
-        class="px-8 lg:px-40 mx-auto flex flex-col md:flex-row justify-center md:justify-start md:items-start md:gap-10 items-center"
+        class="container mx-auto p-4 flex flex-col lg:flex-row lg:justify-evenly"
       >
-        <div
-          class="w-[300px] h-[200px] md:w-[456px] md:h-[342px] mt-16 relative"
-        >
-          <img
-            src="images/DSC_0048.JPG"
-            class="object-contain rounded shadow-xl"
-            alt=""
-          />
-        </div>
-        <div class="tittle px-6 md:px-0 items-center md:mt-14">
-          <h2 class="font-bold text-2xl mt-7">
-            Sambutan Kepala Sekolah <br />
-            SMA IT HSI IDN
-          </h2>
-          <p
-            class="text-sm font-normal text-black text-opacity-50 mt-2 md:mt-6"
+        <div class="lg:w-[65%]">
+          <p>Berita <span class="text-[#FAFF00]">></span> Liputan/Berita</p>
+          <h3
+            class="text-xl md:text-4xl md:w-[537px] font-bold text-black mt-5"
           >
-            Puji dan syukur mari kita panjatkan kehadirat Allah SWT. Yang
-            senantiasa dengan <br />
-            sifat kasih dan sayangnya banyak memberikan nikmat ...
-          </p>
-          <button
-            class="bg-sky-500 hover:bg-sky-600 transition-all ease-in-out text-sm md:text-base font-bold text-white rounded-lg px-8 py-2 mt-5 md:mt-10"
-          >
-            Tonton Disini
-          </button>
-        </div>
-      </div>
-    </section>
-
-    <section class="profil bg-[#F9FBFD] py-8">
-      <div class="container mx-auto px-10 md:flex">
-        <div
-          class="title md:w-2/5 md:border-r md:flex md:flex-col md:justify-center"
-        >
-          <h2 class="text-2xl md:text-3xl font-bold text-black">
-            Profil Sekolah
-          </h2>
-          <p
-            class="text-sm md:text-base font-normal text-black text-opacity-50 mt-4 md:mt-6 md:pr-5"
-          >
-            Berikut ini adalah profil sekolah kami secara <br />
-            keseluruhan dari mulai bagian depan hingga seluruh fasilitas yang
-            terdapat disekolah kami kami akan ...
-          </p>
-          <button
-            class="bg-sky-500 hover:bg-sky-600 transition-all ease-in-out text-sm md:text-base font-bold text-white rounded-lg px-8 py-2 mt-5 md:mt-10 md:w-[184px]"
-          >
-            Lebih Lanjut
-          </button>
-        </div>
-        <div
-          class="fasilitas mt-10 flex flex-col gap-5 justify-center items-center md:flex-row md:flex-wrap md:w-1/2 md:mr-5 md:mx-auto"
-        >
-          <div class="card w-[250px] h-[250px] bg-white rounded shadow-xl">
-            <img src="images/Group 31.png" class="mt-5" alt="" />
-            <h2 class="font-bold text-xl text-black px-7">Fasilitas</h2>
-            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
-              Lorem ipsum dolor sit amet adipcing aqua lorem ipsum.
-            </p>
+            Lomba HUT Kemerdekaan RI Ke-79 Di SMA IT HSI - IDN
+          </h3>
+          <div class="flex gap-4 items-center mt-4">
+            <div class="flex items-center gap-2">
+              <div class="w-5 h-5">
+                <img src="./image/time.png" alt="" />
+              </div>
+              <p class="text-xs lg:text-lg text-black">5 Agustus 2024</p>
+            </div>
+            <div class="flex items-center gap-2">
+              <div class="w-5 h-5">
+                <img src="./image/profile-news.png" alt="" />
+              </div>
+              <p class="text-xs lg:text-lg text-black">Oleh : Daffa Fawwaz</p>
+            </div>
           </div>
-          <div class="card w-[250px] h-[250px] bg-white rounded shadow-xl">
-            <img src="images/Group 33.png" class="mt-5" alt="" />
-            <h2 class="font-bold text-xl text-black px-7">Lokasi</h2>
-            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
-              Lorem ipsum dolor sit amet adipcing aqua lorem ipsum.
-            </p>
+          <div class="w-full mt-2">
+            <img class="w-full" src="images/DSC_0048.JPG" alt="" />
           </div>
-          <div class="card w-[250px] h-[250px] bg-white rounded shadow-xl">
-            <img src="images/Group 34.png" class="mt-5" alt="" />
-            <h2 class="font-bold text-xl text-black px-7">Sejarah</h2>
-            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
-              Lorem ipsum dolor sit amet adipcing aqua lorem ipsum.
+          <div class="flex flex-col gap-5 mt-5">
+            <p class="text-black">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+              sit similique quasi nihil facilis. Sint, distinctio! Iste magnam
+              accusantium delectus harum laborum, distinctio facere omnis ea,
+              animi molestiae, aperiam fugit voluptas sed! Impedit, iusto
+              voluptas! Repudiandae, nemo. Sint mollitia nulla hic. Architecto
+              consequuntur obcaecati voluptates autem repellat consectetur,
+              animi quas?
             </p>
-          </div>
-          <div class="card w-[250px] h-[250px] bg-white rounded shadow-xl">
-            <img src="images/Group 36.png" class="mt-5" alt="" />
-            <h2 class="font-bold text-xl text-black px-7">Prestasi</h2>
-            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
-              Lorem ipsum dolor sit amet adipcing aqua lorem ipsum.
+            <p class="text-black">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              aspernatur inventore enim expedita, doloribus sed minima eveniet
+              quod ipsum eligendi eaque voluptate optio esse explicabo. Hic
+              ducimus voluptate asperiores molestias necessitatibus. Saepe
+              distinctio mollitia, accusamus beatae minima aut et iste explicabo
+              obcaecati perspiciatis quis, corrupti ab rem dolorem debitis
+              necessitatibus!
             </p>
+            <p class="mt-3 text-black">Penulis : Daffa Fawwaz</p>
+            <p class="text-black">Editor : Bambang Sutrisno</p>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="berita my-12">
-      <div class="container px-10 mx-auto">
-        <h2 class="font-bold text-2xl text-black">Berita dan Agenda</h2>
-        <div class="md:flex md:gap-5 md:flex-wrap md:justify-center mt-5">
-          <div class="card bg-white shadow-xl md:w-80 lg:w-96 lg:h-[550px]">
-            <img src="images/image 21.png" class="mt-5 w-full rounded" alt="" />
-            <h2 class="font-bold text-xl text-black px-7 mt-6">Info PPDB</h2>
-            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
-              SK Penetapan Hasil Seleksi PPDB SMA IT HSI IDN
+          <div class="flex flex-wrap gap-2 items-center mt-7">
+            <p class="text-slate-600">TAGS :</p>
+            <p
+              class="bg-blue-200 px-2 py-1 text-sm cursor-pointer text-blue-700"
+            >
+              GOWES
             </p>
             <p
-              class="text-sm font-normal text-black text-opacity-50 px-7 mt-8 pb-6"
+              class="bg-blue-200 px-2 py-1 text-sm cursor-pointer text-blue-700"
             >
-              <a href="infoppdb.html" class="underline text-sky-500"
-                >Baca Selengkapnya</a
-              >
-            </p>
-          </div>
-          <div class="card bg-white shadow-xl md:w-80 lg:w-96 lg:h-[550px]">
-            <img src="images/image 23.png" class="mt-5 w-full rounded" alt="" />
-            <h2 class="font-bold text-xl text-black px-7 mt-6">
-              Info Daftar Ulang
-            </h2>
-            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
-              Informasi tentang Pendaftaran Ulang Calon Peserta Didik yang
-              diterima seleksi PPDB SMA IT HSI IDN.
+              SEKOLAH KU BERSIH DAN HIJAU
             </p>
             <p
-              class="text-sm font-normal text-black text-opacity-50 px-7 mt-8 pb-6"
+              class="bg-blue-200 px-2 py-1 text-sm cursor-pointer text-blue-700"
             >
-              <a href="infoppdb.html" class="underline text-sky-500"
-                >Baca Selengkapnya</a
-              >
-            </p>
-          </div>
-          <div
-            class="card bg-white rounded shadow-xl md:w-80 lg:w-96 lg:h-[550px]"
-          >
-            <img src="images/Mask Group.png" class="mt-5 w-full" alt="" />
-            <h2 class="font-bold text-xl text-black px-7 mt-6">
-              Pengumuman PPDB
-            </h2>
-            <p class="text-sm font-normal text-black text-opacity-50 px-7 mt-4">
-              Untuk mengetahui informasi PPDB I lebih lanjut bisa ke laman
+              KEGIATAN BAKTI SOSIAL
             </p>
             <p
-              class="text-sm font-normal text-black text-opacity-50 px-7 mt-8 pb-6"
+              class="bg-blue-200 px-2 py-1 text-sm cursor-pointer text-blue-700"
             >
-              <a href="infoppdb.html" class="underline text-sky-500"
-                >Baca Selengkapnya</a
-              >
+              JUARA OLIMPIADE SAINS
             </p>
           </div>
         </div>
-      </div>
-    </section>
+        <hr />
 
-    <section class="prestasi bg-[#F9FBFD] pt-8 pb-32">
-      <div class="px-8">
-        <div class="tittle flex flex-col justify-center items-center">
-          <h2 class="text-2xl font-bold text-black">Prestasi</h2>
-          <p
-            class="text-base font-normal text-black text-opacity-70 text-center mt-3"
-          >
-            Pencapaian Sekolah, Guru, dan Siswa SMA IT HSI IDN
-          </p>
-        </div>
-        <div class="lg:flex lg:justify-between">
-          <div
-            class="kartu md:mt-10 grid grid-rows-2 grid-cols-2 md:flex lg:grid lg:grid-rows-2 lg:grid-cols-2 lg:w-[450px]"
-          >
-            <div class="card md:w-80 lg:w-96">
-              <img src="images/Group 31.png" class="mt-5 mx-auto" alt="" />
-              <div class="tittle -mt-3 ml-3">
-                <h2 class="font-extrabold text-3xl text-black px-7 text-center">
-                  300+
-                </h2>
-                <p
-                  class="text-sm font-normal text-black text-opacity-50 px-7 text-center -ml-2"
-                >
-                  Siswa
+        <!-- SIDE NEWS -->
+        <div class="flex flex-col">
+          <!-- BERITA TERBARU -->
+          <div class="flex flex-col mt-5">
+            <h3 class="text-xl font-bold text-slate-800 dark:text-gray-50 mt-5">
+              Berita Terbaru
+            </h3>
+            <div class="flex flex-col mt-5 gap-7 lg:w-72">
+              <div class="flex flex-col">
+                <p class="text-blue-800 font-medium">
+                  Santri SMA HSI - IDN mendapatkan Juara 1 Olimpiade Sains
+                  internasional
                 </p>
+                <p class="text-sm text-slate-600 mt-1">6 September 2024</p>
+                <hr class="mt-2 border-slate-500" />
               </div>
-            </div>
-            <div class="card md:w-80 lg:w-96">
-              <img src="images/Group 33.png" class="mt-5 mx-auto" alt="" />
-              <div class="tittle -mt-3 ml-3">
-                <h2 class="font-extrabold text-3xl text-black px-7 text-center">
-                  50+
-                </h2>
-                <p
-                  class="text-sm font-normal text-black text-opacity-50 px-7 text-center -ml-2"
-                >
-                  Pengajar
+              <div class="flex flex-col">
+                <p class="text-blue-800 font-medium">
+                  Santri SMA HSI - IDN mendapatkan Juara 1 Olimpiade Sains
+                  internasional
                 </p>
+                <p class="text-sm text-slate-600 mt-1">6 September 2024</p>
+                <hr class="mt-2 border-slate-500" />
               </div>
-            </div>
-            <div class="card md:w-80 lg:w-96">
-              <img src="images/Group 34.png" class="mt-5 mx-auto" alt="" />
-              <div class="tittle -mt-3 ml-3">
-                <h2 class="font-extrabold text-3xl text-black px-7 text-center">
-                  200+
-                </h2>
-                <p
-                  class="text-sm font-normal text-black text-opacity-50 px-7 text-center -ml-2"
-                >
-                  Prestasi
+              <div class="flex flex-col">
+                <p class="text-blue-800 font-medium">
+                  Santri SMA HSI - IDN mendapatkan Juara 1 Olimpiade Sains
+                  internasional
                 </p>
+                <p class="text-sm text-slate-600 mt-1">6 September 2024</p>
+                <hr class="mt-2 border-slate-500" />
               </div>
-            </div>
-            <div class="card md:w-80 lg:w-96">
-              <img src="images/Group 36.png" class="mt-5 mx-auto" alt="" />
-              <div class="tittle -mt-3 ml-3">
-                <h2 class="font-extrabold text-3xl text-black px-7 text-center">
-                  3K+
-                </h2>
-                <p
-                  class="text-sm font-normal text-black text-opacity-50 px-7 text-center -ml-2"
-                >
-                  Lulusan
+              <div class="flex flex-col">
+                <p class="text-blue-800 font-medium">
+                  Santri SMA HSI - IDN mendapatkan Juara 1 Olimpiade Sains
+                  internasional
                 </p>
+                <p class="text-sm text-slate-600 mt-1">6 September 2024</p>
+                <hr class="mt-2 border-slate-500" />
               </div>
             </div>
           </div>
-          <div class="gambar md:px-24">
-            <div class="image mt-10">
-              <img
-                src="images/DSC_0098.JPG"
-                class="rounded-lg shadow-2xl lg:w-[600px]"
-                `
-                alt=""
-              />
+
+          <!-- AGENDA TERBARU -->
+          <div class="flex flex-col md:mt-5">
+            <h3 class="text-xl font-bold text-slate-800 dark:text-gray-50 mt-5">
+              Agenda Terbaru
+            </h3>
+            <div class="flex flex-col gap-8 mt-5 lg:w-72">
+              <div
+                class="flex border-b pb-2 border-slate-400 items-center gap-5 cursor-pointer"
+              >
+                <div
+                  class="flex flex-col border-r border-slate-400 pr-3 items-center"
+                >
+                  <p class="text-xl font-bold text-blue-800">17</p>
+                  <p class="text-lg text-slate-500 font-semibold">SEP</p>
+                </div>
+                <div class="text-blue-800 font-medium">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Numquam, iusto.
+                </div>
+              </div>
+              <div
+                class="flex border-b pb-2 border-slate-400 items-center gap-5 cursor-pointer"
+              >
+                <div
+                  class="flex flex-col border-r border-slate-400 pr-3 items-center"
+                >
+                  <p class="text-xl font-bold text-blue-700">17</p>
+                  <p class="text-lg font-semibold text-slate-500">SEP</p>
+                </div>
+                <div class="text-blue-800 font-medium">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Numquam, iusto.
+                </div>
+              </div>
+              <div
+                class="flex border-b pb-2 border-slate-400 items-center gap-5 cursor-pointer"
+              >
+                <div
+                  class="flex flex-col border-r border-slate-400 pr-3 items-center"
+                >
+                  <p class="text-xl font-bold text-blue-800">17</p>
+                  <p class="text-lg font-semibold text-slate-500">SEP</p>
+                </div>
+                <div class="text-blue-800 font-medium">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Numquam, iusto.
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -559,6 +508,5 @@
         sidebar.classList.add("translate-x-full");
       }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
   </body>
 </html>
